setup of solve funtion. need to add parameters

--- a/countdown.ipynb
+++ b/countdown.ipynb
@@ -28,7 +28,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# function to come up with a solution\n"
+    "# main function to solve the number's round\n",
+    "def solve_numbers():\n",
+    "    return"
    ]
   }
  ],
