finished function for random 3 numbers

--- a/countdown.ipynb
+++ b/countdown.ipynb
@@ -28,6 +28,33 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# imports\n",
+    "from random import randint"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# these functions create the random numbers that need to be used \n",
+    "# to solve the round.\n",
+    "# pick_three for the target number\n",
+    "def pick_three():\n",
+    "    return randint(101, 999)\n",
+    "\n",
+    "# pick_six for the numbers to be used to reach target number\n",
+    "def pick_six():\n",
+    "    return"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# main function to solve the number's round\n",
     "def solve_numbers():\n",
     "    return"
