added link for random library docs

--- a/countdown.ipynb
+++ b/countdown.ipynb
@@ -28,8 +28,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# imports\n",
+    "# imports --\n",
     "from random import randint"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "I chose to use the randint from the random library. The task for creating a random number in a certain limit is not too complex using python so therefore this library is perfect for the job. \n",
+    "link to documentation --> https://docs.python.org/3/library/random.html"
    ]
   },
   {
