--- a/countdown.ipynb
+++ b/countdown.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,12 +24,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
     "# imports --\n",
-    "from random import randint"
+    "from random import randint\n",
+    "from random import sample"
    ]
   },
   {
@@ -37,12 +38,13 @@
    "metadata": {},
    "source": [
     "I chose to use the randint from the random library. The task for creating a random number in a certain limit is not too complex using python so therefore this library is perfect for the job. \n",
+    "I chose sample from the random library for picking the six numbers.\n",
     "link to documentation --> https://docs.python.org/3/library/random.html"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,12 +56,61 @@
     "\n",
     "# pick_six for the numbers to be used to reach target number\n",
     "def pick_six():\n",
-    "    return"
+    "    # two copies of regular numbers\n",
+    "    regular_numbers = [i for i in range(1, 11)] * 2\n",
+    "    \n",
+    "    big_numbers = [25, 50, 75, 100]\n",
+    "\n",
+    "    # pick 4 regular numbers and 2 big numbers\n",
+    "    numbers = sample(regular_numbers, 4) + sample(big_numbers, 2)\n",
+    "    return numbers"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "726"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# testing results from pick_three function\n",
+    "pick_three()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[2, 1, 7, 1, 75, 25]"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# testing the results from pick_six function\n",
+    "pick_six()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +127,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.10.11"
   }
  },
