set numbers into variables

--- a/countdown.ipynb
+++ b/countdown.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,16 +68,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "726"
+       "956"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -89,16 +89,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[2, 1, 7, 1, 75, 25]"
+       "[5, 3, 6, 4, 25, 100]"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -110,7 +110,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "129\n",
+      "[10, 4, 6, 2, 75, 50]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# setting the numbers into variables\n",
+    "three_combo = pick_three()\n",
+    "six_combo = pick_six()\n",
+    "\n",
+    "# displaying the numbers\n",
+    "print (three_combo)\n",
+    "print (six_combo)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
