error with using with permutations

--- a/countdown.ipynb
+++ b/countdown.ipynb
@@ -123,7 +123,8 @@
     }
    ],
    "source": [
-    "# setting the numbers into variables\n",
+    "# setting the numbers into variables that can be used\n",
+    "# for problem solving\n",
     "three_combo = pick_three()\n",
     "six_combo = pick_six()\n",
     "\n",
@@ -134,13 +135,94 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# import permutations for number combinations\n",
+    "from itertools import permutations, product"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "# main function to solve the number's round\n",
-    "def solve_numbers():\n",
-    "    return"
+    "# uses the 2 number combo variables\n",
+    "# had issues with showing the operation steps\n",
+    "def solve_numbers(three_combo, six_combo):\n",
+    "    \n",
+    "    three = three_combo\n",
+    "    six = six_combo\n",
+    "    closest = None\n",
+    "    closest_diff = float('inf')\n",
+    "    steps_for_closest = None\n",
+    "    \n",
+    "    # in order to stick to mathematical operations rules\n",
+    "    # i read about using lambdas at https://realpython.com/python-lambda/\n",
+    "    operations = [\n",
+    "        ('+', lambda x, y: x + y),\n",
+    "        ('-', lambda x, y: x - y if x - y > 0 else None),\n",
+    "        ('*', lambda x, y: x * y),\n",
+    "        ('/', lambda x, y: x // y if y != 0 and x % y == 0 else None)\n",
+    "    ]\n",
+    "    \n",
+    "    # permutations ok the six numbers to solve the problem\n",
+    "    # used https://docs.python.org/3/library/itertools.html to understand permutations\n",
+    "    all_permutations = []\n",
+    "    for r in range(1, len(six) + 1):\n",
+    "        for perm in permutations(six, r):\n",
+    "            all_permutations.append(perm)\n",
+    "\n",
+    "    for numbers in all_permutations:\n",
+    "        for ops_combo in product(operations, repeat=len(numbers)-1):\n",
+    "            result = numbers[0]\n",
+    "            valid = True\n",
+    "            steps = []\n",
+    "\n",
+    "            for num, (op_symbol, op_func) in zip(numbers[1:], ops_combo):\n",
+    "                temp_result = op_func(result, num)\n",
+    "                if temp_result is None:\n",
+    "                    valid = False\n",
+    "                    break\n",
+    "                steps.append(f\"{result} {op_symbol} {num} = {temp_result}\")\n",
+    "                result = temp_result\n",
+    "            \n",
+    "            if valid:\n",
+    "                if result == three:\n",
+    "                    return result, steps\n",
+    "                \n",
+    "                diff = abs(three - result)\n",
+    "                if diff < closest_diff:\n",
+    "                    closest_diff = diff\n",
+    "                    closest = result\n",
+    "                    steps_for_closest = steps\n",
+    "\n",
+    "    return closest if closest is not None else 'None', steps_for_closest"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "solve_numbers() takes 0 positional arguments but 2 were given",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[20], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43msolve_numbers\u001b[49m\u001b[43m(\u001b[49m\u001b[43mthree_combo\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43msix_combo\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[1;31mTypeError\u001b[0m: solve_numbers() takes 0 positional arguments but 2 were given"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "solve_numbers(three_combo, six_combo)"
    ]
   }
  ],
