fixed bug with running solve function

--- a/countdown.ipynb
+++ b/countdown.ipynb
@@ -200,7 +200,9 @@
     "                    closest = result\n",
     "                    steps_for_closest = steps\n",
     "\n",
-    "    return closest if closest is not None else 'None', steps_for_closest"
+    "    return closest if closest is not None else 'None', steps_for_closest\n",
+    "\n",
+    "solve_numbers(three_combo, six_combo)"
    ]
   },
   {
