--- a/countdown.ipynb
+++ b/countdown.ipynb
@@ -144,6 +144,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "I used itertools.permutations to create the permutations from 1 to the length of the six list.\n",
+    "The list of size n 's permutations taken r is nPr = n! / (n-r)!"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 55,
    "metadata": {},
@@ -248,7 +256,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -262,7 +270,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.11"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
