--- a/countdown.ipynb
+++ b/countdown.ipynb
@@ -147,8 +147,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "I used itertools.permutations to create the permutations from 1 to the length of the six list.\n",
-    "The list of size n 's permutations taken r is nPr = n! / (n-r)!"
+    "I used itertools.permutations to create the permutations from 1 to the length of the six list. <br>\n",
+    "The list of size n 's permutations taken r is nPr = n! / (n-r)! <br>\n",
+    "The number of permutations for a list of 6 is huge! <br>\n",
+    "If n = the length of the six numbers then you can argue that the total permutations for all lenghts <br>\n",
+    "is 2^n. <br>\n",
+    "For each permutation of length r, there are 4^r-1 combinations.<br>\n",
+    "maximum r = 6, so 4^5=1024 combinations for every permutations of 6 numbers.<br>"
    ]
   },
   {
@@ -270,7 +275,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.10.11"
   }
  },
  "nbformat": 4,
