Time and space complexity

--- a/countdown.ipynb
+++ b/countdown.ipynb
@@ -153,7 +153,7 @@
     "If n = the length of the six numbers then you can argue that the total permutations for all lenghts <br>\n",
     "is 2^n. <br>\n",
     "For each permutation of length r, there are 4^r-1 combinations.<br>\n",
-    "maximum r = 6, so 4^5=1024 combinations for every permutations of 6 numbers.<br>"
+    "maximum r = 6, so 4^5=1024 combinations for every permutations of 6 numbers."
    ]
   },
   {
@@ -215,6 +215,18 @@
     "\n",
     "    return closest if closest is not None else 'None', steps_for_closest\n",
     "# needed to add extra line here to get the function to work\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Complexity:<br>\n",
+    "Calculating the exact time complexity is complicated but it is safe to say that it grows exponentially<br>\n",
+    "with the size of the permutations.<br>\n",
+    "Space is really only affected by the saved permutations via steps_for_closest being used and generally grows<br>\n",
+    "witht he number of inputs. Therefore you could argue for its space complexity being O(k*m). K being the number <br>\n",
+    "of permutations stored and m being the size of the permutations."
    ]
   },
   {
